# mixemup

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  mixemup.py  pyproject.toml  test_mixemup.py
.scripts/: travis_build_docker.sh  travis_deploy_docker.sh
examples/: mkdir.txt  names.txt
scripts/: travis_docker_build.sh
