[tool.poetry]
name = "mixemup"
version = "2.0.2"
description = "Lists out permutations of lines in files."
authors = ["Toni Karppi <karppitoni@gmail.com>"]
license = "MIT"
repository = "https://github.com/tonikarppi/mixemup"
homepage = "https://github.com/tonikarppi/mixemup"
readme = "README.md"
keywords = ["string", "combinations"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
rope = "^0.14.0"
black = {version = "*", allows-prereleases = true}
mypy = "^0.701.0"
pytest = "^4.4"
pre-commit = "^1.15"

[tool.poetry.scripts]
mixemup = "mixemup:console_start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
